Agentforce/force-app/main/default/objects/Welfare_Meeting__c/Welfare_Meeting__c.object-meta.xml
<CustomObject>
    <label>Welfare Meeting</label>
    <nameField>
        <displayFormat>WM-{0000}</displayFormat>
        <label>Meeting Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welfare Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>