Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <inlineHelpText>List the meeting attendees</inlineHelpText>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>