Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Automated_Closure__c.field-meta.xml
<CustomField>
    <fullName>Automated_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by automation if this record was Closed because no response was provided within 35 days.</description>
    <label>Automated Closure</label>
    <type>Checkbox</type>
</CustomField>