Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Welfare Meetings</relationshipLabel>
    <relationshipName>Welfare_Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>