Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Email__c</fullName>
    <description>Populated by Flow from the Case Manager on Case.</description>
    <label>Case Manager Email</label>
    <type>Email</type>
</CustomField>