Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Identify the related Case Issue Type against the Welfare Meeting</description>
    <formula>TEXT(Case__r.Issue_Type__c)</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>