Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Count_of_Occupational_Health_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Occupational_Health_Referrals__c</fullName>
    <label># Occupational  Health Referrals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>