Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>