Agentforce/force-app/main/default/objects/Welfare_Meeting__c/fields/Reason_Meeting_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Meeting_Not_Completed__c</fullName>
    <label>Reason Meeting Not Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>